Update ExtendedAnvilPriorityGui.java